2000-04-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/fqdnalias.cf:
	    - More work on rewritten expansion loop prevention measures.
	    - Added UserDB sender address rewriter into  fqdnalias.cf too.

	* lib/rfc822scan.c, router/functions.c, proto/cf/aliases.cf:
	    Reworked alias (et.al.) expansion loop preventation
	    machinery.  Now a message aliased as:
		user1: user2, user1
	    will be delivered to both, unless some other mapping diverts.
	    NOT YET A COMPLETE THING!

2000-03-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/zmailer.sh.in, proto/newdb.in, proto/db/dbases.conf:
	    Now 'zmailer newdb' uses the  $MAILVAR/db/dbases.conf  file,
	    if it exists.  (But the converted needs to be rewritten,
	    and security issues need more thought...)

2000-03-29  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/threads.c:
	    thread_reschedule() crashed on thr->thvertices being NULL ??

	* router/rfc822hdrs.c:
	    Sometimes missed sending out at least one space after the
	    header name tag.

	* scheduler/transport.c, scheduler/update.c, scheduler/mq2auth.c,
	  transports/smtp/smtptls.c:
	    Various bad diagnostics seen (from smtp) which in turn crashed
	    scheduler :-/  Oops..   Some new comments into  mq2auth.c about
	    possible future directions.

	* proto/cf/crossbar.cf, proto/db/userdb:
	    Some more work on this, now allowing rather peculiar
	    ZMailerish keying at least for ":mailname" keys..

	* router/db.c:
	    Reworked cache code to be faster (I hope) by means of having
	    a crc32 hash value against which the matching is done.
	    The goal is to support in order of 10k entries in the cache
	    without too large of an impact on performance.
	    ( The hash collisions are resolved by means of doing actual
	      key  strcmp() )
	    The cache at each DB relation interface is still an LRU with
	    linear (urgh..) search time.  (A splay-tree was also considered,
	    but decided not to use.)
